--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/todo-app:latest', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/madhav:latest', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/todo-app:latest']
+  args: ['push', 'gcr.io/$PROJECT_ID/madhav:latest']
 - name: 'gcr.io/cloud-builders/helm'
-  args: ['upgrade', '--install', 'todo-app', './helm/todo-app']
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=$ZONE'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=$CLUSTER_NAME'
+  args: ['upgrade', '--install', 'todo-app', './helm/madhav']
+
