--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,6 @@ steps:
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/madhav:latest', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/madhav:latest']
-- name: 'gcr.io/cloud-builders/helm'
+- name: 'alpine/helm'
   args: ['upgrade', '--install', 'todo-app', './helm/madhav']
 
