--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,16 @@ steps:
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/madhav:latest', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/madhav:latest']
-- name: 'alpine/helm'
-  args: ['upgrade', '--install', 'todo-app', './helm/madhav']
+- name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    gcloud container clusters get-credentials $CLUSTER_NAME --zone $ZONE --project $PROJECT_ID
+    helm upgrade --install todo-app ./helm/madhav
+env:
+- 'CLOUDSDK_COMPUTE_ZONE=$ZONE'
+- 'CLOUDSDK_CONTAINER_CLUSTER=$CLUSTER_NAME'
+- 'PROJECT_ID=$PROJECT_ID'
+
 
