--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,8 @@ steps:
   args:
   - '-c'
   - |
-    gcloud container clusters get-credentials sumit-cluster-1	 --zone us-central1-c  --project sumit-gcp-practice
-    helm upgrade --install todo-app ./helm/madhav
+    date
+    # gcloud container clusters get-credentials sumit-cluster-1	 --zone us-central1-c  --project sumit-gcp-practice
+    # helm upgrade --install todo-app ./helm/madhav
 
 
