--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 options:
-  logging: NONE
+  logging: CLOUD_LOGGING_ONLY
 steps:
   # Step 0: Configure Docker authentication
   # - name: 'gcr.io/cloud-builders/gcloud'
