--- a/helm/madhav/values.yaml
+++ b/helm/madhav/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 3
 
 image:
-  repository: gcr.io/$PROJECT_ID/todo-app
+  repository: gcr.io/$PROJECT_ID/todo-madhav
   tag: latest
   pullPolicy: Always
 
