--- a/helm/madhav/templates/service.yaml
+++ b/helm/madhav/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "todo-madhav.fullname" . }}
+  name: {{ include "todo-madhav.name" . }}
 spec:
   type: {{ .Values.service.type }}
   ports:
