--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,11 +3,11 @@ options:
 steps:
   # Step 2: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/madhav:latest', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/todo-madhav:latest', '.']
 
   # Step 3: Push Docker image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/madhav:latest']
+    args: ['push', 'gcr.io/$PROJECT_ID/todo-madhav:latest']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
@@ -19,4 +19,4 @@ steps:
       tar -zxvf helm-v3.6.3-linux-amd64.tar.gz
       mv linux-amd64/helm /usr/local/bin/helm
       helm version
-      helm upgrade --install todo-madhav ./helm/madhav
+      helm upgrade --install todo-madhav ./helm/todo-madhav
