--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,4 +19,6 @@ steps:
       tar -zxvf helm-v3.6.3-linux-amd64.tar.gz
       mv linux-amd64/helm /usr/local/bin/helm
       helm version
-      helm upgrade --install todo-madhav ./helm/todo-madhav
+      helm create mychart
+      helm upgrade --install myrelease ./mychart
+
